force-app/main/default/objects/DropDenomination__c/DropDenomination__c.object-meta.xml
<CustomObject>
    <label>Drop Denomination</label>
    <nameField>
        <displayFormat>DD-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drop Denominations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>