force-app/main/default/objects/DropDenomination__c/fields/BankDenomination__c.field-meta.xml
<CustomField>
    <fullName>BankDenomination__c</fullName>
    <label>Bank Denomination</label>
    <referenceTo>BankDenomenation__c</referenceTo>
    <relationshipLabel>Drops</relationshipLabel>
    <relationshipName>DropDenominations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>