force-app/main/default/objects/DropDenomination__c/fields/Denomination__c.field-meta.xml
<CustomField>
    <fullName>Denomination__c</fullName>
    <label>Denomination</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>