force-app/main/default/objects/DropDenomination__c/fields/Drop__c.field-meta.xml
<CustomField>
    <fullName>Drop__c</fullName>
    <label>Drop</label>
    <referenceTo>Drop__c</referenceTo>
    <relationshipLabel>Drop Denominations</relationshipLabel>
    <relationshipName>DropDenominations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>