force-app/main/default/objects/DropDenomination__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <formula>Denomination__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>